# rules_podman

./: .gitignore  CHANGELOG.md  MODULE.bazel  README.md
.github/workflows/: ci.yml
docs/: BUILD.bazel  defs.md  extensions.md  machine.md  toolchains.md  update.sh
examples/machine/: BUILD.bazel  fcos.raw  machine.argv.golden  machine.ignition.ign.golden  mock_vmm.sh
examples/smoke/: BUILD.bazel  Containerfile  app.txt  version_smoke.sh
podman/: BUILD.bazel  defs.bzl  extensions.bzl  toolchains.bzl
podman/machine/: BUILD.bazel  machine.bzl
podman/private/: BUILD.bazel  known_versions.bzl
tools/: BUILD.bazel  refresh_versions.py
