load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

package(default_visibility = ["//visibility:public"])

# Reference docs are stardoc-generated *and* committed to source. The
# diff_test gates assert the committed file matches what stardoc
# produces from the .bzl docstrings; CI fails if someone changes a rule
# without running `bazel run //docs:update`.

stardoc(
    name = "defs_doc",
    out = "defs.md.generated",
    input = "//podman:defs.bzl",
    deps = ["//podman:defs_bzl"],
)

stardoc(
    name = "extensions_doc",
    out = "extensions.md.generated",
    input = "//podman:extensions.bzl",
    deps = ["//podman:extensions_bzl"],
)

stardoc(
    name = "toolchains_doc",
    out = "toolchains.md.generated",
    input = "//podman:toolchains.bzl",
    deps = ["//podman:toolchains_bzl"],
)

stardoc(
    name = "machine_doc",
    out = "machine.md.generated",
    input = "//podman/machine:machine.bzl",
    deps = ["//podman/machine:machine_bzl"],
)

diff_test(
    name = "defs_doc_up_to_date",
    file1 = "defs.md",
    file2 = ":defs_doc",
)

diff_test(
    name = "extensions_doc_up_to_date",
    file1 = "extensions.md",
    file2 = ":extensions_doc",
)

diff_test(
    name = "toolchains_doc_up_to_date",
    file1 = "toolchains.md",
    file2 = ":toolchains_doc",
)

diff_test(
    name = "machine_doc_up_to_date",
    file1 = "machine.md",
    file2 = ":machine_doc",
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
    data = [
        ":defs_doc",
        ":extensions_doc",
        ":machine_doc",
        ":toolchains_doc",
    ],
)
