load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_macvm//vm:toolchains.bzl", "vm_provider")
load("@rules_podman//podman/machine:machine.bzl", "podman_machine")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# Our own mock VMM (rules_macvm's is dev-only and invisible to consumers).
sh_binary(
    name = "mock_vmm",
    srcs = ["mock_vmm.sh"],
)

vm_provider(
    name = "mock_provider",
    efi_boot = True,
    kind = "mock",
    linux_boot = True,
    nested = True,
    rosetta = True,
    virtiofs = True,
    vmm = ":mock_vmm",
    vsock = True,
)

# A Podman service VM built against the mock backend, so the provisioning
# + VM spec are tested hermetically (no Apple Virtualization.framework).
# For a real machine, drop `provider` (uses the registered @vfkit
# toolchain) and point `image` at a bootable Podman/FCOS disk, on a Mac.
podman_machine(
    name = "machine",
    image = "fcos.raw",
    provider = ":mock_provider",
    ssh_authorized_keys = ["ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAID demo@rules_podman"],
)

# Golden: the rendered Ignition (ssh key + enable podman.socket).
diff_test(
    name = "machine_ignition_test",
    file1 = "machine.ignition.ign.golden",
    file2 = "machine.ignition.ign",
)

# Golden: the resolved vfkit-style VM command line (EFI boot + vsock +
# nat + rosetta + the ignition).
diff_test(
    name = "machine_argv_test",
    file1 = "machine.argv.golden",
    file2 = "machine.argv",
)

build_test(
    name = "machine_build_test",
    targets = [
        ":machine",
        ":machine.ignition",
    ],
)
